crates/karva/tests/it/configuration/snapshots/it__configuration__max_fail_from_config.snap
---
source: crates/karva/tests/it/configuration/mod.rs
info:
  program: karva
  args:
    - test
    - "--no-parallel"
---
success: false
exit_code: 1
----- stdout -----
    Starting 3 tests across 1 worker
        FAIL [TIME] test::test_a
        FAIL [TIME] test::test_b

diagnostics:

error[test-failure]: Test `test_a` failed
 --> test.py:2:5
  |
2 | def test_a():
  |     ^^^^^^
3 |     assert False
  |
info: Test failed here
 --> test.py:3:5
  |
2 | def test_a():
3 |     assert False
  |     ^^^^^^^^^^^^
4 |
5 | def test_b():
  |

error[test-failure]: Test `test_b` failed
 --> test.py:5:5
  |
3 |     assert False
4 |
5 | def test_b():
  |     ^^^^^^
6 |     assert False
  |
info: Test failed here
 --> test.py:6:5
  |
5 | def test_b():
6 |     assert False
  |     ^^^^^^^^^^^^
7 |
8 | def test_c():
  |

────────────
     Summary [TIME] 2 tests run: 0 passed, 2 failed, 0 skipped

----- stderr -----
